[gd_scene load_steps=2 format=2]

[ext_resource path="res://MainScenes/SpawnLocations/EnemySpawn.gd" type="Script" id=1]

[node name="EnemySpawn" type="Node2D"]
script = ExtResource( 1 )

[node name="EnemyGenerator" type="Position2D" parent="."]

[node name="EnemyGenerationTimer" type="Timer" parent="EnemyGenerator"]
one_shot = true
[connection signal="timeout" from="EnemyGenerator/EnemyGenerationTimer" to="." method="_on_EnemyGenerationTimer_timeout"]
